--- a/5star.html
+++ b/5star.html
@@ -425,6 +425,12 @@ pre code {
 </ul>
 <p>在狂飙加入之后，普通五星池已经有40个机器人，剩下的6个（震天尊，亡灵天尊，大黄蜂，小黄蜂，惊天雷，黑擎）只能在泰坦货币商店买到，如无意外，普通五星池不会再改变了。</p>
 </div>
+<div id="后续人物" class="section level2">
+<h2>后续人物</h2>
+<ul>
+<li>挽歌（在2022年3月31日，G1铁皮发布时，已有玩家从普通5星水晶中开出挽歌）</li>
+</ul>
+</div>
 </div>
 <div id="通用币人物" class="section level1">
 <h1>通用币人物</h1>
@@ -564,7 +570,8 @@ pre code {
 <li>震天尊：更好的能量水晶</li>
 <li>饿鲨S-1000：5星饿鲨水晶小概率开出</li>
 <li>挽歌：在发布时直接明码标价购买：￥648一个五星，没有盲盒套路</li>
-<li>闹翻天：直接氪金648或者通过限时礼包（3000能量块）购买，比较亲民</li>
+<li>闹翻天：直接氪金648或者通过限时礼包（3000能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片</li>
+<li>G1铁皮：发布时使用精英要塞水晶（3~5星）搏概率</li>
 </ul>
 </div>
 
