G1铁皮分析，雷达图修复
以及一些小调整

--- a/chars_book/404.html
+++ b/chars_book/404.html
@@ -71,6 +71,7 @@
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
+<li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -102,6 +103,7 @@
 <li class="chapter" data-level="4.5" data-path="斗士系.html"><a href="斗士系.html#猩猩队长"><i class="fa fa-check"></i><b>4.5</b> 猩猩队长<span></span></a></li>
 <li class="chapter" data-level="4.6" data-path="斗士系.html"><a href="斗士系.html#野牛"><i class="fa fa-check"></i><b>4.6</b> 野牛<span></span></a></li>
 <li class="chapter" data-level="4.7" data-path="斗士系.html"><a href="斗士系.html#惊天雷"><i class="fa fa-check"></i><b>4.7</b> 惊天雷<span></span></a></li>
+<li class="chapter" data-level="4.8" data-path="斗士系.html"><a href="斗士系.html#g1铁皮"><i class="fa fa-check"></i><b>4.8</b> G1铁皮<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="战士系.html"><a href="战士系.html"><i class="fa fa-check"></i><b>5</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a>
 <ul>
