--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -71,6 +71,7 @@
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
+<li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -102,6 +103,7 @@
 <li class="chapter" data-level="4.5" data-path="斗士系.html"><a href="斗士系.html#猩猩队长"><i class="fa fa-check"></i><b>4.5</b> 猩猩队长<span></span></a></li>
 <li class="chapter" data-level="4.6" data-path="斗士系.html"><a href="斗士系.html#野牛"><i class="fa fa-check"></i><b>4.6</b> 野牛<span></span></a></li>
 <li class="chapter" data-level="4.7" data-path="斗士系.html"><a href="斗士系.html#惊天雷"><i class="fa fa-check"></i><b>4.7</b> 惊天雷<span></span></a></li>
+<li class="chapter" data-level="4.8" data-path="斗士系.html"><a href="斗士系.html#g1铁皮"><i class="fa fa-check"></i><b>4.8</b> G1铁皮<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="战士系.html"><a href="战士系.html"><i class="fa fa-check"></i><b>5</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a>
 <ul>
@@ -605,31 +607,29 @@
 <ul>
 <li>亚空间脉冲克隆器：对手获得近战或者护甲增益时，黑擎最高有25%的概率将其复制（有效时间与对手相同），每层黑暗能量+5%的概率。</li>
 <li>黑暗能量：黑擎开场后每10秒获得一层黑暗能量，最多10层。半血以下每7秒获得一层，15%血以下5秒。黑暗能力可以提高复制增益的概率、特殊技效果和重击伤害</li>
-<li>重击：驱散对方一层近战或护甲。每层黑暗能量+5%的重击伤害。</li>
-<li>S1：30%的概率将黑擎身上的减益复制到对手身上，每层黑暗能量+3%的概率。同时获得2层黑暗能量。</li>
+<li>重击：驱散对方一层近战加成或护甲加成。每层黑暗能量+5%的重击伤害。</li>
+<li>S1：30%的概率将黑擎身上的减益复制到对手身上，每层黑暗能量+3%的概率。同时获得2层黑暗能量。可惜是“复制”，复制完了自己身上还有，如果是“剪切”就爽了。</li>
 <li>S2：50%的概率驱散对手身上每个近战增益，并施加5%的减攻，持续4秒。每层黑暗能量+5%的概率；50%的概率驱散对手身上每个护甲增益，并施加5%的破甲，持续4秒（经测试，对方没有护甲时也不会施加破甲）。每层黑暗能量+5%的概率。另外：每驱散一个增益，要消耗三层黑暗能量。</li>
 <li>S3：消耗所有黑暗能量。攻击结束后7秒内普攻破防，每层黑暗能量+0.5秒破防时间。</li>
 </ul>
 </div>
 <div id="招牌-6" class="section level4 hasAnchor" number="3.8.1.2">
 <h4><span class="header-section-number">3.8.1.2</span> 招牌<a href="战术系.html#招牌-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>用特殊技伤害的x%给自己回血（觉醒75时回血23.7%）。这让黑擎拥有不俗的续航能力，毕竟特殊技的伤害不低，玩家又可以在连击中保证命中。</p>
+<p>用特殊技伤害的15~25%给自己回血。这让黑擎拥有不俗的续航能力，毕竟特殊技的伤害不低，玩家又可以在连击中保证命中。练黑擎的玩家可以放心地喂战术招牌。</p>
 </div>
 <div id="协同-7" class="section level4 hasAnchor" number="3.8.1.3">
 <h4><span class="header-section-number">3.8.1.3</span> 协同<a href="战术系.html#协同-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
 <li>与战擎同时出战时，黑擎加护甲，战擎破甲能力提升。</li>
 <li>与惊破天同时出战时，增加黑暗能量的相关增益</li>
-<li>受益：搭配震荡波，黑擎的能量功率提升</li>
-<li>授益：提升狂飙的黑暗燃烧伤害</li>
+<li>震荡波（受益）：搭配，黑擎的能量功率提升</li>
+<li>狂飙（授益）：提升狂飙的黑暗燃烧伤害</li>
 </ul>
+<p>与黑擎形成协同的霸天虎角色都实力不俗，让玩家可以围绕他打造一支霸天虎队。</p>
 </div>
 <div id="短板-7" class="section level4 hasAnchor" number="3.8.1.4">
 <h4><span class="header-section-number">3.8.1.4</span> 短板<a href="战术系.html#短板-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<ul>
-<li>从目前特殊Boss的情况来看，黑擎的AI与战擎相同，即使配了回血模块，也只是多了一倍的战斗时间，一点威慑力也没有。</li>
-<li>如果交由玩家使用，黑擎并没有太大短板，无非是没有战擎的高输出高爆发。另外黑擎的S3简直难堪大用。</li>
-</ul>
+<p>黑擎并没有太大短板，无非是没有战擎的高输出高爆发。另外相比战擎，黑擎的S3简直难堪大用。</p>
 </div>
 </div>
 <div id="推荐打法-7" class="section level3 hasAnchor" number="3.8.2">
@@ -638,7 +638,7 @@
 <p>在面对汽车大师、猩猩等buff型角色时，重击的驱散能力值得利用。</p>
 <div id="短战斗-7" class="section level4 hasAnchor" number="3.8.2.1">
 <h4><span class="header-section-number">3.8.2.1</span> 短战斗<a href="战术系.html#短战斗-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>采用和战擎相似的打法，多用重击控制对方buff，主要围绕S2打输出，吃到debuff时用S1送走。</p>
+<p>采用和战擎相似的打法，多用重击控制对方buff，主要围绕S2打输出，吃到debuff时用S1报复给敌人。</p>
 </div>
 <div id="长战斗-7" class="section level4 hasAnchor" number="3.8.2.2">
 <h4><span class="header-section-number">3.8.2.2</span> 长战斗<a href="战术系.html#长战斗-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -649,6 +649,7 @@
 <h3><span class="header-section-number">3.8.3</span> 基地防守<a href="战术系.html#基地防守-7" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>科技控制台可以提高他的回血能力，曲速电池增加他重击的次数，但除此之外黑擎并没有太大的防守能力。</p>
 <!--/Note-->
+
 </div>
 </div>
 </div>
