--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -71,6 +71,7 @@
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
+<li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -102,6 +103,7 @@
 <li class="chapter" data-level="4.5" data-path="斗士系.html"><a href="斗士系.html#猩猩队长"><i class="fa fa-check"></i><b>4.5</b> 猩猩队长<span></span></a></li>
 <li class="chapter" data-level="4.6" data-path="斗士系.html"><a href="斗士系.html#野牛"><i class="fa fa-check"></i><b>4.6</b> 野牛<span></span></a></li>
 <li class="chapter" data-level="4.7" data-path="斗士系.html"><a href="斗士系.html#惊天雷"><i class="fa fa-check"></i><b>4.7</b> 惊天雷<span></span></a></li>
+<li class="chapter" data-level="4.8" data-path="斗士系.html"><a href="斗士系.html#g1铁皮"><i class="fa fa-check"></i><b>4.8</b> G1铁皮<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="战士系.html"><a href="战士系.html"><i class="fa fa-check"></i><b>5</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a>
 <ul>
@@ -546,25 +548,73 @@
 </div>
 <div id="基地防守-14" class="section level3 hasAnchor" number="4.7.3">
 <h3><span class="header-section-number">4.7.3</span> 基地防守<a href="斗士系.html#基地防守-14" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>由于电脑AI不太懂得合理利用惊天雷净化和加攻的能力，加上惊天雷在突袭时优势巨大，基地防守不是惊天雷的专长。<del>由于他能挡住大部分重击，所以如果配折射镜模块，可以有效防止远程重击角色用重击放风筝。</del></p>
+<p>由于电脑AI不太懂得合理利用惊天雷净化和加攻的能力，加上惊天雷在突袭时优势巨大，基地防守不是惊天雷的专长。</p>
 <!--/Note-->
-<!-- ## G1铁皮 -->
-<!-- ![](img/50 - Ironhide_G1_Icon.jpg) -->
-<!-- ```{r echo=FALSE, fig.width=5, fig.retina = 2, cache=TRUE} -->
-<!-- plot_radar(c(8, 8, 8, 8, 8, 8)) -->
-<!-- ``` -->
-<!-- <!--Note-->
-<p>–&gt;
-<!-- ### 特点分析 --></p>
-<!-- 铁皮的类别虽然有点意外，但也合理，G1铁皮在脾气方面虽不如电影铁皮，但依然有够暴躁，所以在不重复归入爆破系的前提下，斗士是很适合G1铁皮“糙爷们 + 擎天柱好哥们”的人物设定。 -->
-<!-- #### 能力 -->
-<!-- #### 招牌 -->
-<!-- #### 协同 -->
-<!-- #### 短板 -->
-<!-- ### 推荐打法  -->
-<!-- #### 短战斗 -->
-<!-- #### 长战斗 -->
+</div>
+</div>
+<div id="g1铁皮" class="section level2 hasAnchor" number="4.8">
+<h2><span class="header-section-number">4.8</span> G1铁皮<a href="斗士系.html#g1铁皮" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p><img src="img/50%20-%20Ironhide_G1_Icon.jpg" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-17-1.png" width="480" /></p>
+<!--Note-->
+<div id="特点分析-15" class="section level3 hasAnchor" number="4.8.1">
+<h3><span class="header-section-number">4.8.1</span> 特点分析<a href="斗士系.html#特点分析-15" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>铁皮的类别虽然有点意外，但也合理，G1铁皮在脾气方面虽不如电影铁皮，但依然有够暴躁，所以在不重复归入爆破系的前提下，斗士是很适合G1铁皮“糙爷们 + 擎天柱好哥们”的人物设定。</p>
+<div id="能力-15" class="section level4 hasAnchor" number="4.8.1.1">
+<h4><span class="header-section-number">4.8.1.1</span> 能力<a href="斗士系.html#能力-15" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<ul>
+<li>天然15%的暴击抗性</li>
+<li>护甲，铁皮获得护甲的方式真不少：
+<ul>
+<li>开局就带着五层+4%的护甲，也就是10秒内有20%的护甲。</li>
+<li>铁皮受到攻击时有30%的概率获得一层2-12%的护甲增益，持续10秒。（这里的“受到攻击”不一定要是挨打，防御和最后时刻闪避都算受到攻击，类似猩猩获得护甲的机制）</li>
+<li>每次新获得一层护甲，就有75%的概率得到8秒的攻击增益（9-20%），攻防同时提升，非常彪悍</li>
+<li>中等连击最后一击会刷新所有护甲增益的过期时间，此时如果铁皮身上的护甲不足五层，则获得2%的护甲一层，持续10秒。——看到这里是不是有一种感觉：这老家伙不是身披一堆护甲，就是在给自己加上护甲的路上？在实战中确实如此，如果你手残，电脑一套连击就很可能给你套上两三层护甲，如果你水平高，近战少打几下，快点用中攻击结束，可以轻松保持比较多的护甲数量。</li>
+<li>按住防御1.5秒会触发减益净化，用一个护甲净化一层减益。技能描述中没有明确何种类型的减益，经实测连蝎子的毒药也可以净化，这让铁皮的适用范围变得很大。但是——在实测中发现，他按住站防时只要对手过来摸一下或者远距离点一枪，净化的倒计时就没了！换句话说，你不但要防，对手还得乖乖在一边看着，才能净化。其他几个站防触发效果的角色（天火、野牛、探长）都是无视对方攻击的（除非被重击击倒），所以这个如果不改的话，铁皮这个技能基本上没用。</li>
+<li>铁皮身上每层护甲会给他的特殊技加10%的概率打晕3秒，只要定期刷新护甲，在特殊技的时候30-50%的晕点概率还是比较稳的。不过如果打晕的话就会丢失5层护甲。</li>
+</ul></li>
+<li>重击平时没有什么特别效应，但是对方如果晕了的话伤害加200%，所以一旦打晕，对方气已经比较多，马上怼一发重击就够了，如果气不多，可以两枪后前冲<strong>2连击</strong>后重击，这时对方还没醒，重击一定能命中，比较超值。实测过，再多打对方就醒了，如果同时也是你是救护车或者喷气机的重度使用者，建议把昏迷精通点满，这样晕的时间更长。</li>
+</ul>
+<p>作为斗士，护甲让铁皮自身的坦度提升不少。而铁皮对护甲的运用则额外给了他加攻、净化和击晕的多元化能力。要对付电脑的铁皮，破甲依然是关键，而且电脑越挨打护甲层数越多，没有通天晓这样一破到底的还真难保证输出。</p>
+<ul>
+<li>S1：获得20-35%的近战增益，持续8秒。</li>
+<li>S2：连放三炮，前两炮有点像警车的散弹枪，然后出7秒霸体。霸体结束后获得三层护甲，持续10秒。比汽车大师那种一抬脚就出霸体浪费时间要实用很多。</li>
+<li>S3：同救护车S3动画。刷新所有护甲，并且在剩余战斗中降低对方减益效果10%，可以堆4层。目前想不出有什么特别合适的应用场合。</li>
+</ul>
+</div>
+<div id="招牌-14" class="section level4 hasAnchor" number="4.8.1.2">
+<h4><span class="header-section-number">4.8.1.2</span> 招牌<a href="斗士系.html#招牌-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>在血量降到75%，50%和25%的时候，铁皮获得近战反伤的能力7.5秒。此时敌人每一次近战打击铁皮，铁皮有概率（16-90%）对敌人造成75%的伤害。和犀牛，碎骨魔的反伤不同，铁皮的反伤不是DOT而是直接伤害，不能被净化。从设计上看这是又一个电脑受益巨大的招牌，毕竟玩家要高觉醒不容易，而玩家挨打也少，不可能到了3个血量档位就开始主动挨打。而电脑……比方说盟战高难度，攻击力巨大，再配一个计时类的模块，不允许玩家到了3个血量档位时耐心等7.5秒，那就比较麻烦了。</p>
+</div>
+<div id="协同-14" class="section level4 hasAnchor" number="4.8.1.3">
+<h4><span class="header-section-number">4.8.1.3</span> 协同<a href="斗士系.html#协同-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<ul>
+<li>挽歌，闹翻天（相互）：加攻击2- 8%。这协同就是新人物光环啊。</li>
+<li>警车（相互）：对抗霸天虎时加攻2-12%，然而实际应用到组队的时候写着加攻90%，战斗中也确实如此！</li>
+</ul>
+</div>
+<div id="短板-15" class="section level4 hasAnchor" number="4.8.1.4">
+<h4><span class="header-section-number">4.8.1.4</span> 短板<a href="斗士系.html#短板-15" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>即使卡邦可能会调整他净化被打断的问题，在斗士里面，铁皮的净化依然比钢锁、猩猩和惊天雷还是要来得麻烦些，在吃到DOT的时候要躲到远处站防1.5秒，这时伤害已经造成了，像挽歌这种2秒流血的都肯定已经全吃了。</p>
+</div>
+</div>
+<div id="推荐打法-15" class="section level3 hasAnchor" number="4.8.2">
+<h3><span class="header-section-number">4.8.2</span> 推荐打法<a href="斗士系.html#推荐打法-15" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="短战斗-14" class="section level4 hasAnchor" number="4.8.2.1">
+<h4><span class="header-section-number">4.8.2.1</span> 短战斗<a href="斗士系.html#短战斗-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>开局尽量通过刷新保持5个以上的护甲，围绕S1的加攻和打晕来快速输出。</p>
+</div>
+<div id="长战斗-14" class="section level4 hasAnchor" number="4.8.2.2">
+<h4><span class="header-section-number">4.8.2.2</span> 长战斗<a href="斗士系.html#长战斗-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>围绕S2的霸体，可以更加保证对对方的威慑，减少战斗磨损。</p>
+</div>
+</div>
+<div id="基地防守-15" class="section level3 hasAnchor" number="4.8.3">
+<h3><span class="header-section-number">4.8.3</span> 基地防守<a href="斗士系.html#基地防守-15" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>铁皮本身就很肉，觉醒后更适合基地防守。</p>
+<p>搭配领袖模块可以把他变得更肉。搭配机器人资源可以大大提高他的防守收益。因为第一，铁皮的S2不比警车的好躲，第二，在出招牌技能的时候玩家如果选择等待，则会给铁皮加气变红的机会。</p>
 <!--/Note-->
+
 </div>
 </div>
 </div>
