--- a/chars_book/饿鲨.html
+++ b/chars_book/饿鲨.html
@@ -71,6 +71,7 @@
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
+<li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -102,6 +103,7 @@
 <li class="chapter" data-level="4.5" data-path="斗士系.html"><a href="斗士系.html#猩猩队长"><i class="fa fa-check"></i><b>4.5</b> 猩猩队长<span></span></a></li>
 <li class="chapter" data-level="4.6" data-path="斗士系.html"><a href="斗士系.html#野牛"><i class="fa fa-check"></i><b>4.6</b> 野牛<span></span></a></li>
 <li class="chapter" data-level="4.7" data-path="斗士系.html"><a href="斗士系.html#惊天雷"><i class="fa fa-check"></i><b>4.7</b> 惊天雷<span></span></a></li>
+<li class="chapter" data-level="4.8" data-path="斗士系.html"><a href="斗士系.html#g1铁皮"><i class="fa fa-check"></i><b>4.8</b> G1铁皮<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="战士系.html"><a href="战士系.html"><i class="fa fa-check"></i><b>5</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a>
 <ul>
@@ -243,7 +245,7 @@
 </div>
 <div id="s-1000" class="section level2 hasAnchor" number="9.7">
 <h2><span class="header-section-number">9.7</span> S-1000<a href="饿鲨.html#s-1000" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>S-1000在2019年2月的饿鲨周加入五星饿鲨水晶，概率只有5%，由于从NPC变成玩家可拥有，他被安排到了侦查系，<del>基础数值属于正常机器人的水准</del>虽然战力看起来像是正常机器人的水准，实际基础数值（攻血）还是饿鲨的档次，难堪大用。而且开始的时候连基地生产黄金的能力都不如同阶的五星机器人，让很多想把泰坦币商店“七大员”全放基地的玩家（比如本人）强迫症都要犯了，后来在6阶机器人发布的过程中调整为与五星机器人一致。（不过现在不要紧了，飞过山出了）</p>
+<p>S-1000在2019年2月的饿鲨周加入五星饿鲨水晶，概率只有5%，由于从NPC变成玩家可拥有，必须要有类别，于是偷了警车霰弹枪的他，被安排到了侦查系，<del>基础数值属于正常机器人的水准</del>虽然战力看起来像是正常机器人的水准，实际基础数值（攻血）还是饿鲨的档次，难堪大用。而且开始的时候连基地生产黄金的能力都不如同阶的五星机器人，让很多想把泰坦币商店“七大员”全放基地的玩家（比如本人）强迫症都要犯了，后来在6阶机器人发布的过程中调整为与五星机器人一致。（不过现在不要紧了，飞过山出了）</p>
 <ul>
 <li>拳路：横炮</li>
 <li>S1：横炮</li>
